--- a/js_calc.html
+++ b/js_calc.html
@@ -37,9 +37,10 @@
           <li>*</li>
           <li>-</li>
           <li>+</li>
-          <li>=</li>
+          <li id="equals">=</li>
         </ul>
       </div>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
